--- a/public/assets/sass/global/_variables.scss
+++ b/public/assets/sass/global/_variables.scss
@@ -2,13 +2,13 @@
 $white: #fff;
 $black: #313131;
 $danger: #dc3545;
-$yellow: #FFC82A;
-$gray: #5B6880;
-$light-gray: #97A1B3;
-$gray2: #FBFCFF;
-$dark-blue: #01358D;
+$yellow: #ffc82a;
+$gray: #5b6880;
+$light-gray: #97a1b3;
+$gray2: #fbfcff;
+$dark-blue: #1b75bb;
 $dark-blue2: #175198;
-$light-green: #32E2A9;
+$light-green: #32e2a9;
 
 //== social media colors
 $facebook: #3b5999;
@@ -16,19 +16,16 @@ $twitter: #55acee;
 $dribbble: #ea4c89;
 $behance: #131418;
 $google-plus: #dd4b39;
-$linkedin: #0077B5;
+$linkedin: #0077b5;
 $instagram: #e4405f;
 $pinterest: #c8232c;
-
 
 /*-----------------
     # Typography
 -----------------*/
 
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,400i,500,600,700|Rubik:400,400i,500,500i,700,700i&display=swap');
-
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,400i,500,600,700|Rubik:400,400i,500,500i,700,700i&display=swap");
 
 //  transition
-$transition: all .3s ease-in;
-$transition-long: all .5s ease-in;
-
+$transition: all 0.3s ease-in;
+$transition-long: all 0.5s ease-in;
