--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8220,6 +8220,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   border-bottom: 1px solid #d9dde4;
   border-radius: 0;
   padding: 0;
+  color: #2575BB;
 }
 .job-apply-area .single-input-wrap textarea {
   padding: 10px 0 !important;
