--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8210,10 +8210,10 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 }
 
 .job-apply-area {
-  -webkit-box-shadow: 0px 8px 30px #97a1b224;
-  box-shadow: 0px 8px 30px #97a1b224;
+  /* -webkit-box-shadow: 0px 8px 30px #97a1b224;
+  box-shadow: 0px 8px 30px #97a1b224; */
   border-radius: 8px;
-  padding: 120px 68px;
+  /* padding: 120px 68px; */
 }
 .job-apply-area .single-input-wrap .single-input {
   border: 0;
@@ -8400,4 +8400,9 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 
 .hovered {
   background-color: lightblue;
+}
+
+.reset-margins {
+  margin-right: unset;
+  margin-left: unset;
 }
