--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -15,6 +15,10 @@
   .revert-mobile {
     flex-direction: column-reverse;
   }
+  .rs-drawer-left.rs-drawer-sm,
+  .rs-drawer-right.rs-drawer-sm {
+    width: 100vw !important;
+  }
 }
 
 @media only screen and (min-width: 1600px) {
