--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8407,3 +8407,24 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   margin-right: unset;
   margin-left: unset;
 }
+
+#discount-banner {
+  margin: 45px 0px;
+  font-family: "poppins";
+  font-weight: 500;
+  background: #000000c9;
+  height: 100px;
+  width: 600px;
+  border-radius: 20px;
+  color: #fff !important;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  display: flex;
+  align-items: center;
+}
+
+.banner-img {
+  width: 150px;
+  margin-top: -5px;
+  margin-left: -30px;
+  float: left;
+}
