--- a/public/assets/sass/sections/_job.scss
+++ b/public/assets/sass/sections/_job.scss
@@ -63,6 +63,32 @@
   }
 }
 
+.job-highlight-btn {
+  background: #ffffff;
+  border: 1px solid #d6dae1;
+  border-radius: 4px;
+  font-size: var(--body-font-size);
+  letter-spacing: 0.3px;
+  color: $light-gray;
+  height: 44px;
+  line-height: 44px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  padding: 0 30px;
+  display: inline-block;
+  &:hover {
+    box-shadow: 0px 7px 16px #1b75bb6b;
+    background: $dark-blue;
+    color: $white;
+    border: 1px solid $dark-blue;
+  }
+  &:focus,
+  &:active {
+    box-shadow: none;
+    outline: 0;
+  }
+}
+
 /**job-details-area**/
 .job-details-area {
   .section-title {
@@ -128,6 +154,16 @@
     border: 0;
     box-shadow: 0px 7px 16px #1b75bb6b;
     background: $dark-blue;
+    color: $white;
+    &:hover {
+      opacity: 0.9;
+    }
+  }
+  .job-highlight-btn {
+    margin-top: 69px;
+    border: 0;
+    box-shadow: 0px 7px 16px #a709556b;
+    background: #a709556b;
     color: $white;
     &:hover {
       opacity: 0.9;
