--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4294,6 +4294,27 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   display: block;
 }
 
+.job-highlight{
+-webkit-box-shadow: 0px 1px 5px 0px rgba(27,117,187,0.65);
+-moz-box-shadow: 0px 1px 5px 0px rgba(27,117,187,0.65);
+box-shadow: 0px 1px 5px 0px rgba(27,117,187,0.65);
+}
+.job-highlight-btn{
+  background: #f82e7d;
+  border: 1px solid #f82e7d;
+  border-radius: 4px;
+  font-size: var(--body-font-size);
+  letter-spacing: 0.3px;
+  color: #ffffff;
+  height: 44px;
+  line-height: 44px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  padding: 0 30px;
+  display: inline-block;
+}
 .job-apply-btn {
   background: #ffffff;
   border: 1px solid #d6dae1;
@@ -4317,12 +4338,46 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   color: #fff;
   border: 1px solid #1b75bb;
 }
+.job-highlight-btn:hover{
+  -webkit-box-shadow: 0px 7px 16px #1b75bb6b;
+  box-shadow: 0px 7px 16px #1b75bb6b;
+  background: #1b75bb;
+  color: #fff;
+  border: 1px solid #1b75bb;
+}
 .job-apply-btn:focus,
 .job-apply-btn:active {
   -webkit-box-shadow: none;
   box-shadow: none;
   outline: 0;
 }
+.job-highlight-btn:focus
+.job-highlight-btn:active{
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  outline: 0;
+}
+ .job-highlight-btn:hover{
+  -webkit-box-shadow: 0px 7px 16px #1b75bb6b;
+  box-shadow: 0px 7px 16px #1b75bb6b;
+  background: #1b75bb;
+  color: #fff;
+  border: 1px solid #1b75bb;
+ }
+.job-apply-btn:hover {
+  -webkit-box-shadow: 0px 7px 16px #1b75bb6b;
+  box-shadow: 0px 7px 16px #1b75bb6b;
+  background: #1b75bb;
+  color: #fff;
+  border: 1px solid #1b75bb;
+}
+.job-apply-btn:focus,
+.job-apply-btn:active {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  outline: 0;
+}
+
 
 /**job-details-area**/
 .job-details-area .section-title .title {
@@ -4385,7 +4440,14 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   border-radius: 50%;
   background: #5b6880;
 }
-
+.job-details-area .job-highlight-btn {
+  margin-top: 69px;
+  border: 0;
+  -webkit-box-shadow: 0px 7px 16px #1b75bb6b;
+  box-shadow: 0px 7px 16px #1b75bb6b;
+  background: #1b75bb;
+  color: #fff;
+}
 .job-details-area .job-apply-btn {
   margin-top: 69px;
   border: 0;
